<resources>
    <string name="app_name">Schedule Notification</string>
    <string name="tittle">Tittle</string>
    <string name="desc">Desc</string>
    <string name="schedule_notification">Schedule Notification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rotate">Rotate</string>
    <string name="translate">Translate</string>
    <string name="scale">Scale</string>
    <string name="fade">Fade</string>
    <string name="sky_color">Sky Color</string>
    <string name="shower">Shower</string>
</resources>